<resources>


    <string name="action">"Swipe Left To Begin"</string>
    <string name="ar"><u><b>"Find Informtion about monument"</b></u><i>"\n Not sure what you're looking at? Get details about the monument you're gazing at on your screen"</i></string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_profile_settings">Edit Profile </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_profile_picture">Profile Picture</string>

    <!-- Strings related to sign up -->
    <string name="error_email_exists">This email is already registered with Garcon</string>
    <string name="success_account_created">You account has been successfully created.</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_confirmpassword">Confirm Password</string>
    <string name="prompt_phonenumber">Phone Number (999-999-9999)</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">The password should be 8–20 characters with 1 uppercase, 1 lowercase, 1 number</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_confirmpassword">The passwords do not match.</string>
    <string name="error_incorrect_email">This email has not been registered with us. Please Sign Up</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="button_signup">Sign Up</string>
    <string name="error_incorrect_phonenumber">The phone number is not valid.</string>

    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_location">Map</string>
    <string name="app_name">Tourist Guide</string>
    <string name="title_activity_main">CardStack Sample</string>
    <string name="show_init_animation">Show Init Animation</string>
    <string name="parallax_enabled">Parallax Enabled</string>
    <string name="parallax_scale">Parallax Scale</string>
    <string name="card_gap">Gap Between Cards (in dp)</string>
    <string name="card_gap_bottom">Gap Between Cards when collapsed (in dp)</string>
    <string name="settings">Settings</string>
    <string name="restart_activity">Apply and Restart</string>
    <string name="reset_defaults">Reset Defaults</string>
    <string name="card_title">Card %1$d</string>
    <string name="reverse_click_animation">Reverse Click Animation</string>
    <string name="title_activity_home_page">HomePage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
